[gd_scene load_steps=6 format=2]

[ext_resource path="res://weapons/components/ItemBody.gd" type="Script" id=1]
[ext_resource path="res://particles/loot/lootside.png" type="Texture" id=2]
[ext_resource path="res://weapons/saved/good_shotgun.tres" type="Resource" id=5]





[sub_resource type="BoxShape" id=1]

[sub_resource type="SphereMesh" id=2]
radial_segments = 4
rings = 2

[node name="ItemBody" type="RigidBody"]
collision_layer = 4
mode = 2
gravity_scale = 2.0
script = ExtResource( 1 )
gun_resource = ExtResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="Trail" type="Sprite3D" parent="."]
offset = Vector2( 0, 350 )
billboard = 2
double_sided = false
texture = ExtResource( 2 )

[node name="Mesh" type="Spatial" parent="."]
transform = Transform( -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0, 1, 0, 0, 0 )

[node name="DefaultMesh" type="MeshInstance" parent="Mesh"]
mesh = SubResource( 2 )
material/0 = null

[node name="ReselectDowntime" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="timeout" from="ReselectDowntime" to="." method="_on_ReselectDowntime_timeout"]
